--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,15 +17,14 @@
   <body>
       <nav class="bg-light border navbar navbar-expand-md navbar-light">
           <div class="container-fluid">
-              <a class="navbar-brand" href="/">BikeFinder</a>
-              <li>
-                      class="nav-item"><a class="nav-link" href="/find">Find
-              </a>
-              </li>
-              <!-- <button aria-controls="navbar" aria-expanded="false"
+              <a class="navbar-brand" href="/find">BikeFinder</a>
+                  <!--<a class="nav-link" href="/find">Find</a>
+
+              <button aria-controls="navbar" aria-expanded="false"
                 aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                  <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
